2005-05-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: RepoRef now derives BaseObject to enable full-text
	search
	* src/GenericFilter.py: Enable Repositories in full-text search filter

2005-05-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (upgrade_7): Add upgrade path for repo changes.
	* src/const.py.in: Define integer constants for standard events.
	* gramps.glade: Resolve merge conflicts.
	* src/GrampsBSDDB.py (upgrade_*): Use transaction for commits.
	* src/const.py.in: Get rid of TransTable use in favor of int contsants.
	* src/GrampsBSDDB.py (upgrade_2): Use proper constants.
	* src/RelLib.py: Move constants out to const.py.in.

	* src/ChooseParents.py: Fix constants.
	* src/FamilyView.py: Fix constants.
	* src/PedView.py: Fix constants.
	* src/ReadGedcom.py: Fix constants.
	* src/ReadXML.py: Fix constants.
	* src/SelectChild.py: Fix constants.
	* src/WriteXML.py: Fix constants.

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: polish Repository Ref UI
	* src/RelLib.py: merge minor changes from HEAD
	* src/RepositoryRefEdit.py: polish Repository Ref UI
	* src/gramps.glade: polish Repository Ref UI

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: completed delete Repository
	* src/RepositoryView.py: completed delete Repository
	* src/Utils.py: added then removed a method, line number changed.

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditSource.py: completed support Repository Ref UI
	* src/RepositoryRefEdit.py: everything now works accept MediaType
	* src/gramps.glade: tooltips etc. for Repository Ref UI

2005-05-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: Add wrappers for old event handle API including a
	DeprecationWarning (this makes HEAD no longer completely defunct);
	Add checks for EventRef class type
	* src/EditPerson.py: typo
	* src/plugins/TestcaseGenerator.py:  Support for event references.
