@@ -1268,7 +1268,7 @@ class Person(PrimaryObject,PrivateSourceNote,MediaBase,AttributeBase):
         # remove when transitition done.
         event_ref = EventRef()
         event_ref.set_reference_handle(event_handle)
-        event_ref.set_role( EventRef.ROLE_PRIMARY)
+        event_ref.set_role( const.ROLE_PRIMARY)
         self.set_death_ref( event_ref)
 
     def set_death_ref(self,event_ref):
@@ -1331,7 +1331,7 @@ class Person(PrimaryObject,PrivateSourceNote,MediaBase,AttributeBase):
         # remove when transitition done.
         event_ref = EventRef()
         event_ref.set_reference_handle(event_handle)
-        event_ref.set_role( EventRef.ROLE_PRIMARY)
+        event_ref.set_role( const.ROLE_PRIMARY)
         self.add_event_ref( event_ref)
 
     def add_event_ref(self,event_ref):
@@ -1376,7 +1376,7 @@ class Person(PrimaryObject,PrivateSourceNote,MediaBase,AttributeBase):
         for event_handle in event_list:
             event_ref = EventRef()
             event_ref.set_reference_handle(event_handle)
-            event_ref.set_role( EventRef.ROLE_PRIMARY)
+            event_ref.set_role( const.ROLE_PRIMARY)
             event_ref_list.append( event_ref)
         self.set_event_ref_list(event_ref_list)
 
@@ -2065,7 +2065,7 @@ class Family(PrimaryObject,SourceNote,MediaBase,AttributeBase):
         # remove when transitition done.
         event_ref = EventRef()
         event_ref.set_reference_handle(event_handle)
-        event_ref.set_role( EventRef.ROLE_PRIMARY)
+        event_ref.set_role( const.ROLE_PRIMARY)
         self.add_event_ref( event_ref)
 
     def add_event_ref(self,event_ref):
@@ -2110,7 +2110,7 @@ class Family(PrimaryObject,SourceNote,MediaBase,AttributeBase):
         for event_handle in event_list:
             event_ref = EventRef()
             event_ref.set_reference_handle(event_handle)
-            event_ref.set_role( EventRef.ROLE_PRIMARY)
+            event_ref.set_role( const.ROLE_PRIMARY)
             event_ref_list.append( event_ref)
         self.set_event_ref_list(event_ref_list)
 
