@@ -2,6 +2,8 @@
 	* src/RelLib.py: RepoRef now derives BaseObject to enable full-text
 	search
 	* src/GenericFilter.py: Enable Repositories in full-text search filter
+	* src/RelLib.py: Move constants from RelLib to const
+	* src/plugins/TestcaseGenerator.py: Move constants from RelLib to const
 
 2005-05-27  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsBSDDB.py (upgrade_7): Add upgrade path for repo changes.
